# libdrawille

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
benchmark/: CMakeLists.txt  fill_triangle_bench.c
doc/: MathJax-config.js
examples/: CMakeLists.txt  draw_sine_graph.c  rotate_filled_pentagon.c  rotate_square.c
src/: CMakeLists.txt  Canvas.c  Canvas.h  coordinate_array.c  coordinate_array.h  main.c  mat3.c  mat3.h  point.c  point.h  polygon.c  polygon.h  stamp.c  stamp.h  utils.c  utils.h
src/x86/: avx2.c  sse.c  x86.h
test/: CMakeLists.txt  combine.c  rotate.c  scale.c  translate.c  util.c  util.h
